@@ -1,0 +1,2 @@
+#name: C6X parallel instructions on same functional unit
+#error-output: resource-func-unit-1.l
