@@ -1,0 +1,2 @@
+#name: C6X parallel instructions on same functional unit, multiple sections
+#error-output: resource-func-unit-2.l
