@@ -1,0 +1,3 @@
+[^:]*: Assembler messages:
+[^:]*:17: Error: functional unit already used in this execute packet
+[^:]*:19: Error: functional unit already used in this execute packet
